Se añade documentacion al outlet. Se elimina put outlet/{id} para evitar repetición de codigo
