# app/Http/Requests/ProductUpdateRequest.php
@@ -28,7 +28,7 @@ class ProductUpdateRequest extends FormRequest
             'stock' => 'integer',
             'image' => 'url',
             'has_discount'=>'sometimes|boolean',
-            'discount'=> 'sometimes|numeric',
+            'discount'=> 'sometimes|numeric|gte:0|lte:100',
             'category_id'=>'sometimes|integer|exists:categories,id',
             'provider_id'=>'sometimes|integer|exists:providers,id'
         ];
